[package]
name = "session-ticket-rustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.3", features = ["server", "server-auto", "tokio"] }
rcgen = "0.12.1"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.25.0"
