[package]
name = "session-ticket-rustls"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.11", features = ["server", "server-auto", "tokio"] }
rcgen = "0.13.2"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.26.2"
